# claude-equity-momentum

./: .env.example  .gitignore  Equity_Momentum_App_FRD.docx  README.md  pyproject.toml  run.bat  run.sh  stop.bat  stop.sh
app/: alerts.py  charges.py  db.py  paths.py  pidfile.py  redaction.py  settings.py  time_utils.py
app/dhan/: client.py  errors.py  models.py
app/live/: engine.py  recon.py
app/paper/: engine.py
app/strategy/: config.py  indicators.py  signals.py  universe.py
app/tools/: __init__.py  backfill_today.py
app/universe/: __init__.py  bhavcopy.py  refresh.py  scrip_master.py
app/web/: main.py  views.py
app/web/static/: app.css
app/web/templates/: base.html  config.html  live.html  overview.html  paper.html  trades.html
app/web/templates/partials/: rebalance_tab.html  settings_modal.html  top_bar.html
app/worker/: jobs.py  main.py  scheduler.py
docs/: FRD.md
research/: health_check.py
tests/: test_charges.py  test_command_inbox.py  test_db.py  test_dhan_client.py  test_live.py  test_market_status_job.py  test_paper_engine.py  test_pidfile.py  test_redaction.py  test_resolve_security.py  test_settings_env.py  test_strategy.py  test_token_status.py  test_trade_log_pv.py  test_universe_bhavcopy.py  test_universe_provider.py  test_universe_refresh.py  test_universe_scrip_master.py  test_web.py
